--- a/exercise109/manifests/ingress.yaml
+++ b/exercise109/manifests/ingress.yaml
@@ -1,15 +1,15 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: logoutput
+  name: pingpong
 spec:
   rules:
   - http:
       paths:
-      - path: /
+      - path: /pingpong
         pathType: Prefix
         backend:
           service:
-            name: logoutput
+            name: pingpong
             port:
-              number: 2345
+              number: 3456
